Fix test Fix JavacFileManager.getServiceLoader